feat: complete to css in of proyect

--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -53,16 +53,16 @@
     </header>
     <main>
         <section class="contacto">
-            <h1>Contactanós</h1>
+            <h2>Contact</h1>
             <article class="correo-numero">
-                <p>Si tienes alguna solicitud o peticion especial, estamos aqui para ayudarte</p>
-                <h3>Telefono</h3>
-                <a href="tel:+573044598748">+1 855 7348707</a>
-                <h3>Correo</h3>
-                <a href="mailto:info@mansory.com">info@manosory.com</a>
+                <p>	Reach out if you have questions, want to collaborate, or need support with this project.</p>
+                <h3>Phone</h3>
+                <a href="tel:+18557348707">+1 855 7348707</a>
+                <h3>Email</h3>
+                <a href="mailto:info@mansory.com">sebastianlinero15@gmail.com</a>
             </article>
-            <article class="formulario">
-                <form action="/send" method="post">
+            <article class="form">
+                <form id="contactForm" action="#" method="post">
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" required>
 
@@ -93,4 +93,9 @@
 
 
     <script type="module" src="../js/main.js"></script>
+    <script>
+
+    </script>
 </body>
+
+</html>
