--- a/src/pages/removeProduct.html
+++ b/src/pages/removeProduct.html
@@ -53,9 +53,9 @@
     </header>
 
     <main>
-        <h2>Remove Products</h2>
+        
         <section id="addProductSection">
-            <h2>Enter The Information About Product</h2>
+            <h2>Remove Products</h2>
             <form id="productForm">
                 <label for="productName">Product Name:</label>
                 <input type="text" id="productName" name="productName" required />
@@ -66,7 +66,7 @@
                 <label for="productCategory">Category:</label>
                 <input type="text" id="productCategory" name="productCategory" required />
 
-                <button type="submit">Add Product</button>
+                <button type="submit">Remove Product</button>
             </form>
             <p id="formMessage"></p>
         </section>
