--- a/src/pages/editProduct.html
+++ b/src/pages/editProduct.html
@@ -52,8 +52,22 @@
         </nav>
     </header>
     <main>
-        <h2>Edit Product</h2>
+        <section id="editProductSection">
+            <h2>Edit Product</h2>
+            <form id="productForm">
+                <label for="productName">Product Name:</label>
+                <input type="text" id="productName" name="productName" required />
 
+                <label for="productPrice">Price:</label>
+                <input type="number" id="productPrice" name="productPrice" required min="1" />
+
+                <label for="productCategory">Category:</label>
+                <input type="text" id="productCategory" name="productCategory" required />
+
+                <button type="submit">Edit Product</button>
+            </form>
+            <p id="formMessage"></p>
+        </section>
 
     </main>
     <footer>
