feat.add te project

--- a/index.html
+++ b/index.html
@@ -3,32 +3,30 @@
 
 <head>
   <!-- General Meta Tags -->
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta http-equiv="Content-Language" content="en" />
-  <meta name="author" content="Sebastian Linero De Castro" />
-  <meta name="designer" content="Sebastian Linero De Castro" />
-  <meta name="copyright" content="© 2025 SlineroDC. All rights reserved" />
-  <meta name="organization" content="SlineroDC" />
-  <meta name="sitedomain" content="https://github.com/SlineroDC/Object-Oriented-Data-Managementw" />
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+  <meta name="author" content="Sebastian Linero De Castro"/>
+  <meta name="designer" content="Sebastian Linero De Castro"/>
+  <meta name="copyright" content="© 2025 SlineroDC. All rights reserved"/>
+  <meta name="organization" content="SlineroDC"/>
+  <meta name="sitedomain" content="https://github.com/SlineroDC/Object-Oriented-Data-Managementw"/>
   <meta name="description"
     content="A project demonstrating data management with JavaScript objects, sets, and maps. Interactive structures, validation, and data handling." />
-  <meta name="keywords" content="JavaScript, Data Management, Objects, Sets, Maps, Web Development" />
-  <meta name="robots" content="index,follow" />
-  <meta name="googlebot" content="index,follow" />
-  <meta name="revisit-after" content="15days" />
-  <meta name="theme-color" content="#ffffff" />
+  <meta name="keywords" content="JavaScript, Data Management, Objects, Sets, Maps, Web Development"/>
+  <meta name="robots" content="index,follow"/>
+  <meta name="googlebot" content="index,follow"/>
+  <meta name="revisit-after" content="15days"/>
+  <meta name="theme-color" content="#ffffff"/>
 
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Object-Oriented Data Management" />
-  <meta property="og:description"
-    content="A project demonstrating data management with JavaScript objects, sets, and maps. Interactive structures, validation, and data handling." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://github.com/SlineroDC/Object-Oriented-Data-Managementw" />
-  <meta property="og:image"
-    content="https://raw.githubusercontent.com/SlineroDC/Object-Oriented-Data-Managementw/refs/heads/develop/src/img/logo.png" />
-  <meta property="og:site_name" content="SlineroDC Projects" />
+  <meta property="og:description" content="A project demonstrating data management with JavaScript objects, sets, and maps. Interactive structures, validation, and data handling."/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:url" content="https://github.com/SlineroDC/Object-Oriented-Data-Managementw"/>
+  <meta property="og:image" content="https://raw.githubusercontent.com/SlineroDC/Object-Oriented-Data-Management/refs/heads/develop/src/img/logo.png" />
+
+  <meta property="og:site_name" content="SlineroDC Projects"/>
 
   <!-- Fonts or External Links -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
