--- a/src/pages/addProduct.html
+++ b/src/pages/addProduct.html
@@ -6,7 +6,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta http-equiv="Content-Language" content="en" />
     <meta name="author" content="Sebastian Linero De Castro" />
     <meta name="designer" content="Sebastian Linero De Castro" />
     <meta name="copyright" content="© 2025 SlineroDC. All rights reserved" />
@@ -56,18 +55,19 @@
         <section id="addProductSection">
             <h2>Add Products</h2>
             <form id="productForm">
+                <label for="productId">Product ID:</label>
+                <input type="text" id="productId" name="productId" required />
+
                 <label for="productName">Product Name:</label>
                 <input type="text" id="productName" name="productName" required />
 
                 <label for="productPrice">Price:</label>
                 <input type="number" id="productPrice" name="productPrice" required min="1" />
 
-                <label for="productCategory">Category:</label>
-                <input type="text" id="productCategory" name="productCategory" required />
-
                 <button type="submit">Add Product</button>
             </form>
             <p id="formMessage"></p>
+            <pre id="displayListProducts"></pre>
         </section>
 
     </main>
@@ -88,3 +88,4 @@
 
     <script type="module" src="../js/main.js"></script>
 </body>
+</html>
