--- a/src/pages/editProduct.html
+++ b/src/pages/editProduct.html
@@ -6,7 +6,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta http-equiv="Content-Language" content="en" />
     <meta name="author" content="Sebastian Linero De Castro" />
     <meta name="designer" content="Sebastian Linero De Castro" />
     <meta name="copyright" content="© 2025 SlineroDC. All rights reserved" />
@@ -55,14 +54,14 @@
         <section id="editProductSection">
             <h2>Edit Product</h2>
             <form id="productForm">
+                <label for="productId">Product ID:</label>
+                <input type="text" id="productId" name="productId" required />
+
                 <label for="productName">Product Name:</label>
                 <input type="text" id="productName" name="productName" required />
 
                 <label for="productPrice">Price:</label>
                 <input type="number" id="productPrice" name="productPrice" required min="1" />
-
-                <label for="productCategory">Category:</label>
-                <input type="text" id="productCategory" name="productCategory" required />
 
                 <button type="submit">Edit Product</button>
             </form>
@@ -86,3 +85,5 @@
 
     <script type="module" src="../js/main.js"></script>
 </body>
+
+</html>
