fix: repair to js

--- a/src/pages/addProduct.html
+++ b/src/pages/addProduct.html
@@ -67,7 +67,7 @@
                 <button type="submit">Add Product</button>
             </form>
             <p id="formMessage"></p>
-            <pre id="displayListProducts"></pre>
+            <div id="displayListProducts"></div>
         </section>
 
     </main>
