--- a/src/pages/listProducts.html
+++ b/src/pages/listProducts.html
@@ -55,7 +55,7 @@
         <section id="listProducts">
             <h2>Complete Product List</h2>
             <button id="btnListProducts">View List of Products</button>
-            <pre id="displayListProducts"></pre>
+            <div id="displayListProducts"></div>
         </section>
     </main>
       <footer>
